# tiny8

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  sphinx.yml
docs/: architecture.rst  assembly_language.rst  conf.py  getting_started.rst  index.rst  visualization.rst
docs/examples/: array_sum.rst  bubblesort.rst  count_bits.rst  factorial.rst  fibonacci.rst  find_max.rst  gcd.rst  hello_world.rst  index.rst  is_prime.rst  linear_search.rst  memory_copy.rst  multiply_by_shift.rst  power.rst  reverse.rst  sum_1_to_n.rst
examples/: array_sum.asm  bubblesort.asm  bubblesort.py  count_bits.asm  factorial.asm  fibonacci.asm  fibonacci.py  find_max.asm  gcd.asm  hello_world.asm  is_prime.asm  linear_search.asm  memory_copy.asm  multiply_by_shift.asm  power.asm  reverse.asm  sum_1_to_n.asm
src/tiny8/: __init__.py  assembler.py  cli.py  cpu.py  memory.py  parser.py  utils.py  visualizer.py
tests/: __init__.py  conftest.py  test_arithmetic.py  test_assembler.py  test_cli.py  test_control_flow.py  test_cpu.py  test_cpu_branches.py  test_cpu_core.py  test_cpu_edge_cases.py  test_data_transfer.py  test_integration.py  test_logic_and_bit.py  test_mcu_control.py  test_memory.py  test_misc_ops.py  test_shifts_rotates.py  test_ui_components.py  test_utils.py
